v1.1.0/modules/schema/pages/class/PhaseTapChangerTabular.adoc
= `PhaseTapChangerTabular`
:toclevels: 4


+++Describes a tap changer with a table defining the relation between the tap step and the phase angle difference across the transformer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PhaseTapChangerTabular`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/TapChanger.adoc[`TapChanger`]
**** xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]
***** *`PhaseTapChangerTabular`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<PhaseTapChangerTable,`PhaseTapChangerTable`>>
//| [[slots_table.PhaseTapChangerTable]]<<PhaseTapChangerTable,`PhaseTapChangerTable`>>
| 0..1 +
xref::class/PhaseTapChangerTable.adoc[`PhaseTapChangerTable`]
| +++The phase tap changer table for this phase tap changer.+++
| _n/a_

| <<TransformerEnd,`TransformerEnd`>>
//| [[slots_table.TransformerEnd]]<<TransformerEnd,`TransformerEnd`>>
| 1 +
xref::class/TransformerEnd.adoc[`TransformerEnd`]
| +++Transformer end to which this phase tap changer belongs.+++
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]

| <<SvTapStep,`SvTapStep`>>
//| [[slots_table.SvTapStep]]<<SvTapStep,`SvTapStep`>>
| 0..1 +
xref::class/SvTapStep.adoc[`SvTapStep`]
| +++The tap step state associated with the tap changer.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<TapChangerControl,`TapChangerControl`>>
//| [[slots_table.TapChangerControl]]<<TapChangerControl,`TapChangerControl`>>
| 0..1 +
xref::class/TapChangerControl.adoc[`TapChangerControl`]
| +++The regulating control scheme in which this tap changer participates.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<TapSchedules,`TapSchedules`>>
//| [[slots_table.TapSchedules]]<<TapSchedules,`TapSchedules`>>
| 0..* +
xref::class/TapSchedule.adoc[`TapSchedule`]
| +++A TapChanger can have TapSchedules.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<controlEnabled,`controlEnabled`>>
//| [[slots_table.controlEnabled]]<<controlEnabled,`controlEnabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the regulation status of the equipment.  True is regulating, false is not regulating.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<highStep,`highStep`>>
//| [[slots_table.highStep]]<<highStep,`highStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Highest possible tap step position, advance from neutral.
The attribute shall be greater than lowStep.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<initialDelay,`initialDelay`>>
//| [[slots_table.initialDelay]]<<initialDelay,`initialDelay`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++For an LTC, the delay for initial tap changer operation (first step change).+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<lowStep,`lowStep`>>
//| [[slots_table.lowStep]]<<lowStep,`lowStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Lowest possible tap step position, retard from neutral.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<ltcFlag,`ltcFlag`>>
//| [[slots_table.ltcFlag]]<<ltcFlag,`ltcFlag`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies whether or not a TapChanger has load tap changing capabilities.+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<neutralStep,`neutralStep`>>
//| [[slots_table.neutralStep]]<<neutralStep,`neutralStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The neutral tap step position for this winding.
The attribute shall be equal to or greater than lowStep and equal or less...+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<neutralU,`neutralU`>>
//| [[slots_table.neutralU]]<<neutralU,`neutralU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Voltage at which the winding operates at the neutral tap setting. It is the voltage at the terminal of the...+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<normalStep,`normalStep`>>
//| [[slots_table.normalStep]]<<normalStep,`normalStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The tap step position used in "normal" network operation for this winding. For a "Fixed" tap changer indicates the current...+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<step,`step`>>
//| [[slots_table.step]]<<step,`step`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Tap changer position.
Starting step for a steady state solution. Non integer values are allowed to support continuous tap...+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<subsequentDelay,`subsequentDelay`>>
//| [[slots_table.subsequentDelay]]<<subsequentDelay,`subsequentDelay`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++For an LTC, the delay for subsequent tap changer operation (second and later step changes).+++
| xref::class/TapChanger.adoc[`TapChanger`]

| <<AssetDatasheet,`AssetDatasheet`>>
//| [[slots_table.AssetDatasheet]]<<AssetDatasheet,`AssetDatasheet`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Clearances,`Clearances`>>
//| [[slots_table.Clearances]]<<Clearances,`Clearances`>>
| 0..* +
xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ConfigurationEvent,`ConfigurationEvent`>>
//| [[slots_table.ConfigurationEvent]]<<ConfigurationEvent,`ConfigurationEvent`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Controls,`Controls`>>
//| [[slots_table.Controls]]<<Controls,`Controls`>>
| 0..* +
xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<GenericAction,`GenericAction`>>
//| [[slots_table.GenericAction]]<<GenericAction,`GenericAction`>>
| 0..* +
xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperatingShare,`OperatingShare`>>
//| [[slots_table.OperatingShare]]<<OperatingShare,`OperatingShare`>>
| 0..* +
xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSREvents,`PSREvents`>>
//| [[slots_table.PSREvents]]<<PSREvents,`PSREvents`>>
| 0..* +
xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSRType,`PSRType`>>
//| [[slots_table.PSRType]]<<PSRType,`PSRType`>>
| 0..1 +
xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..* +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<VerificationAction,`VerificationAction`>>
//| [[slots_table.VerificationAction]]<<VerificationAction,`VerificationAction`>>
| 0..* +
xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.AssetDatasheet,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Clearances,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvent,&#10548;>>
--
////


//[discrete]
[#controlEnabled]
=== `controlEnabled`
+++Specifies the regulation status of the equipment.  True is regulating, false is not regulating.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.controlEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.controlEnabled,&#10548;>>
--
////


//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Controls,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.GenericAction,&#10548;>>
--
////


//[discrete]
[#highStep]
=== `highStep`
+++Highest possible tap step position, advance from neutral.
The attribute shall be greater than lowStep.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.highStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.highStep,&#10548;>>
--
////


//[discrete]
[#initialDelay]
=== `initialDelay`
+++For an LTC, the delay for initial tap changer operation (first step change).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.initialDelay`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.initialDelay,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#lowStep]
=== `lowStep`
+++Lowest possible tap step position, retard from neutral.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.lowStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.lowStep,&#10548;>>
--
////


//[discrete]
[#ltcFlag]
=== `ltcFlag`
+++Specifies whether or not a TapChanger has load tap changing capabilities.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.ltcFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.ltcFlag,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#neutralStep]
=== `neutralStep`
+++The neutral tap step position for this winding.
The attribute shall be equal to or greater than lowStep and equal or less than highStep.
It is the step position where the voltage is neutralU when the other terminals of the transformer are at the ratedU.  If there are other tap changers on the transformer those taps are kept constant at their neutralStep.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.neutralStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.neutralStep,&#10548;>>
--
////


//[discrete]
[#neutralU]
=== `neutralU`
+++Voltage at which the winding operates at the neutral tap setting. It is the voltage at the terminal of the PowerTransformerEnd associated with the tap changer when all tap changers on the transformer are at their neutralStep position.  Normally neutralU of the tap changer is the same as ratedU of the PowerTransformerEnd, but it can differ in special cases such as when the tapping mechanism is separate from the winding more common on lower voltage transformers.
This attribute is not relevant for PhaseTapChangerAsymmetrical, PhaseTapChangerSymmetrical and PhaseTapChangerLinear.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.neutralU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.neutralU,&#10548;>>
--
////


//[discrete]
[#normalStep]
=== `normalStep`
+++The tap step position used in "normal" network operation for this winding. For a "Fixed" tap changer indicates the current physical tap setting.
The attribute shall be equal to or greater than lowStep and equal to or less than highStep.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.normalStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.normalStep,&#10548;>>
--
////


//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperatingShare,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#PhaseTapChangerTable]
=== `PhaseTapChangerTable`
+++The phase tap changer table for this phase tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PhaseTapChangerTabular.PhaseTapChangerTable`
| Cardinality
| 0..1
| Type
| xref::class/PhaseTapChangerTable.adoc[`PhaseTapChangerTable`]


|===

////
[.text-left]
--
<<slots_table.PhaseTapChangerTable,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSREvents,&#10548;>>
--
////


//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSRType,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#step]
=== `step`
+++Tap changer position.
Starting step for a steady state solution. Non integer values are allowed to support continuous tap variables. The reasons for continuous value are to support study cases where no discrete tap changer has yet been designed, a solution where a narrow voltage band forces the tap step to oscillate or to accommodate for a continuous solution as input.
The attribute shall be equal to or greater than lowStep and equal to or less than highStep.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.step`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.step,&#10548;>>
--
////


//[discrete]
[#subsequentDelay]
=== `subsequentDelay`
+++For an LTC, the delay for subsequent tap changer operation (second and later step changes).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.subsequentDelay`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.subsequentDelay,&#10548;>>
--
////


//[discrete]
[#SvTapStep]
=== `SvTapStep`
+++The tap step state associated with the tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.SvTapStep`
| Cardinality
| 0..1
| Type
| xref::class/SvTapStep.adoc[`SvTapStep`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.SvTapStep,&#10548;>>
--
////


//[discrete]
[#TapChangerControl]
=== `TapChangerControl`
+++The regulating control scheme in which this tap changer participates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.TapChangerControl`
| Cardinality
| 0..1
| Type
| xref::class/TapChangerControl.adoc[`TapChangerControl`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.TapChangerControl,&#10548;>>
--
////


//[discrete]
[#TapSchedules]
=== `TapSchedules`
+++A TapChanger can have TapSchedules.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapChanger.TapSchedules`
| Cardinality
| 0..*
| Type
| xref::class/TapSchedule.adoc[`TapSchedule`]

| Inherited from
| xref::class/TapChanger.adoc[`TapChanger`]


|===

////
[.text-left]
--
<<slots_table.TapSchedules,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransformerEnd]
=== `TransformerEnd`
+++Transformer end to which this phase tap changer belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PhaseTapChanger.TransformerEnd`
| Cardinality
| 1
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| Inherited from
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]


|===

////
[.text-left]
--
<<slots_table.TransformerEnd,&#10548;>>
--
////


//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.VerificationAction,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PhaseTapChangerTable.adoc[`PhaseTapChangerTable`] | xref::class/PhaseTapChangerTable.adoc#PhaseTapChangerTabular[`PhaseTapChangerTabular`]


|===

